投稿機能のレイアウト微調整

--- a/app/views/public/exhibitions/edit.html.erb
+++ b/app/views/public/exhibitions/edit.html.erb
@@ -1,12 +1,24 @@
-<h1>編集画面</h1>
+<div class=" d-flex align-items-center justify-content-center pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-11 col-md-8 col-lg-6 mx-auto">
+        <div class="card shadow">
+          <div class="card-body text-secondary text-center">
+            <h1>編集画面</h1>
 
-<%= form_with model: @exhibition do |f| %>
-  <p>タイトル</p>
-  <%= f.text_field :title %>
+            <%= form_with model: @exhibition do |f| %>
+              <p>タイトル</p>
+              <%= f.text_field :title %>
 
-  <p>紹介文</p>
-  <%= f.text_field :introduction %>
+              <p>紹介文</p>
+              <%= f.text_field :introduction %>
 
-  <%= f.submit '更新' %>
+              <%= f.submit '更新' %>
 
-<% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
