--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,11 @@
-<div class="container">
-  <h1>Well Come</h1>
+<div class=" d-flex align-items-center justify-content-center pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-11 col-md-8 col-lg-6 mx-auto">
+        <div class="text-center">
+          <h1>Well Come!!</h1>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
