--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,24 +10,39 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to '投稿フォーム', new_exhibition_path %>
-        </li>
-        <li>
-          <%= link_to "log out", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "sign up", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "log in", new_user_session_path %>
-        </li>
-      <% end %>
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <a class="navbar-brand p-3" href="/">rogo</a>
+          <button class="navbar-toggler" type="button" data-toggler="collapse"data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li>
+                  <%= link_to '投稿フォーム', new_exhibition_path %>
+                </li>
+                <li>
+                  <%= link_to "log out", destroy_user_session_path, method: :delete %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to "sign up", new_user_registration_path %>
+                </li>
+                <li>
+                  <%= link_to "log in", new_user_session_path %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <%= yield %>
-  </body>
+    <main class="mb-auto">
+      <%= yield %>
+    </main>
 </html>
+
+
