--- a/app/views/public/exhibitions/show.html.erb
+++ b/app/views/public/exhibitions/show.html.erb
@@ -1,5 +1,15 @@
-<p><%= image_tag @exhibition.image, size: "200x200" %></p>
-<p><%= @exhibition.title %></p>
-<p><%= @exhibition.introduction %></p>
-<p><%= link_to "編集", edit_exhibition_path(@exhibition.id) %></p>
-<p><%= link_to "削除", exhibition_path(@exhibition.id), method: :delete, "date-confirm" => "本当に削除しますか？" %></p>
+<div class=" d-flex align-items-center justify-content-center pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-11 col-md-8 col-lg-6 mx-auto">
+        <div class="text-center">
+          <p><%= image_tag @exhibition.image, size: "200x200" %></p>
+          <p><%= @exhibition.title %></p>
+          <p><%= @exhibition.introduction %></p>
+          <p><%= link_to "編集", edit_exhibition_path(@exhibition.id) %></p>
+          <p><%= link_to "削除", exhibition_path(@exhibition.id), method: :delete, "date-confirm" => "本当に削除しますか？" %></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
