--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,4 +1,12 @@
-<div class="container">
-  <h1>Photo Exhibition</h1>
-    <p>サイトの紹介文</p>
+<div class=" d-flex align-items-center justify-content-center pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-11 col-md-8 col-lg-6 mx-auto">
+        <div class="text-center">
+          <h1>Photo Exhibition</h1>
+            <p>サイトの紹介文</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
