--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,12 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li>
+                  <%= link_to 'exhibitor', users_path %>
+                </li>
+                <li>
+                  <%= link_to 'my page', user_path(current_user.id) %>
+                </li>
+                <li>
                   <%= link_to '投稿フォーム', new_exhibition_path %>
                 </li>
                 <li>
