--- a/app/views/public/exhibitions/index.html.erb
+++ b/app/views/public/exhibitions/index.html.erb
@@ -6,7 +6,9 @@
           <h1>Photo Gallery</h1>
 
           <% @exhibition.each do |exhibition| %>
+            <%= link_to exhibition_path(exhibition.id) do %>
               <%= image_tag exhibition.image, size: "200x200" %>
+            <% end %>
           <% end %>
         </div>
       </div>
