--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Users#edit</h1>
-<p>Find me in app/views/admin/users/edit.html.erb</p>
+<div class=" d-flex align-items-center justify-content-center pt-5">
+  <div class="container">
+    <div class="row">
+      <div class="col-11 col-md-8 col-lg-6 mx-auto">
+        <h4><strong><%= @user.name %>さんの会員情報</strong></h4>
+          <p>ユーザーID  <%= @user.id %></p>
+            <%= form_with model: @user, url: admin_user_path(@user.id), method: :patch do |f| %>
+              <p>名前  <%= f.text_field :name %></p>
+              <p>メールアドレス  <%= f.text_field :email %></p>
+              <p>会員ステータス</p>
+              <%= f.submit '変更', class: "btn btn-success" %>
+            <% end %>
+      </div>
+    </div>
+  </div>
+</div>
