--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,7 +15,9 @@
           </tr>
           <% @users.each do |user| %>
           <tr>
-            <td><%= user.name %></td>
+            <td><%= link_to admin_user_path(user.id) do %>
+            <%= user.name %></td>
+            <% end %>
             <td><%= user.email %></td>
           </tr>
           <% end %>
