--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
-        <h4><%= @user.name %>さんの会員情報</h4>
+        <h4><strong><%= @user.name %>さんの会員情報</strong></h4>
         <p>ユーザーID  <%= @user.id %></p>
         <p>名前  <%= @user.name %></p>
         <p>メールアドレス  <%= @user.email %></p>
