--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,8 @@
                 <li>
                   <%= link_to "log out", destroy_user_session_path, method: :delete %>
                 </li>
+              <% elsif admin_signed_in? %>
+                  <%= link_to "log out", destroy_admin_session_path, method: :delete %>
               <% else %>
                 <li>
                   <%= link_to "sign up", new_user_registration_path %>
