--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,12 @@
                   <%= link_to "log out", destroy_user_session_path, method: :delete %>
                 </li>
               <% elsif admin_signed_in? %>
+                <li>
+                  <%= link_to "category", admin_categories_path %>
+                </li>
+                <li>
                   <%= link_to "log out", destroy_admin_session_path, method: :delete %>
+                </li>
               <% else %>
                 <li>
                   <%= link_to "sign up", new_user_registration_path %>
