--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,9 @@
                 </li>
               <% elsif admin_signed_in? %>
                 <li>
+                  <%= link_to "user", admin_users_path %>
+                </li>
+                <li>
                   <%= link_to "category", admin_categories_path %>
                 </li>
                 <li>
