--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -7,7 +7,8 @@
             <%= form_with model: @user, url: admin_user_path(@user.id), method: :patch do |f| %>
               <p>名前  <%= f.text_field :name %></p>
               <p>メールアドレス  <%= f.text_field :email %></p>
-              <p>会員ステータス</p>
+              <p>会員ステータス
+                  <%= f.radio_button :is_deleted, 0, checked: true %>有効 <%= f.radio_button :is_deleted, 1 %>退会</p>
               <%= f.submit '変更', class: "btn btn-success" %>
             <% end %>
       </div>
