--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -6,8 +6,14 @@
         <p>ユーザーID  <%= @user.id %></p>
         <p>名前  <%= @user.name %></p>
         <p>メールアドレス  <%= @user.email %></p>
-        <p>会員ステータス</p>
+        <p>会員ステータス
+            <% if @user.is_deleted == false %>
+              <span class="text-success"><strong>有効</strong></span>
+            <% else %>
+              <span class="text-secondary"><strong>退会</strong></span>
+            <% end %></p>
         <%= link_to '編集', edit_admin_user_path(@user.id), class: "btn btn-sm btn-success" %>
+        <%= link_to 'ユーザー一覧', admin_users_path, class: "btn btn-sm btn-success" %>
         <%#= link_to 'コメント一覧', class: "btn btn-sm btn-danger" %>
       </div>
     </div>
