--- a/app/views/public/exhibitions/new.html.erb
+++ b/app/views/public/exhibitions/new.html.erb
@@ -9,7 +9,8 @@
               <%= form_with model: @exhibition do |f| %>
                 <h4>展示写真</h4><%= f.file_field :image, accept: "image/*" %>
                 <h4>タイトル</h4><%= f.text_field :title %>
-                <h4>紹介文</h4><%= f.text_field :introduction %><br>
+                <h4>紹介文</h4><%= f.text_field :introduction %>
+                <h4>カテゴリー</h4><%= f.collection_select :category_id, @categories, :id, :name, {prompt: "--選択してください--"}, {class: "form-control input-sm"} %>
                 <%= f.submit '展示する' %>
               <% end %>
           </div>
