いいね機能の実装

--- a/app/views/public/exhibitions/show.html.erb
+++ b/app/views/public/exhibitions/show.html.erb
@@ -6,6 +6,20 @@
           <p><%= image_tag @exhibition.image, size: "200x200" %></p>
           <p><%= @exhibition.title %></p>
           <p><%= @exhibition.introduction %></p>
+              <!--いいね機能実装-->
+              <% if @exhibition.favorited_by?(current_user) %>
+                <p>
+                  <%= link_to exhibition_favorites_path(@exhibition), method: :delete do %>
+                    ♥<%= @exhibition.favorites.count %> いいね
+                  <% end %>
+                </p>
+                  <% else %>
+                <p>
+                  <%= link_to exhibition_favorites_path(@exhibition), method: :post do %>
+                    ♡<%= @exhibition.favorites.count %> いいね
+                  <% end %>
+                </p>
+              <% end %>
           <p><%= link_to "編集", edit_exhibition_path(@exhibition.id) %></p>
           <p><%= link_to "削除", exhibition_path(@exhibition.id), method: :delete, "date-confirm" => "本当に削除しますか？" %></p>
         </div>
