--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -7,6 +7,7 @@
           <%= @user.nickname %>
           <%= @user.profile %>
           <%= @user.extemal_link %>
+          <%= link_to 'いいね一覧', favorites_user_path(@user) %>
           <%= link_to '会員情報編集', edit_user_path, class: "btn btn-sm btn-success" %>
       </div>
     </div>
