--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -14,7 +14,7 @@
             <% end %></p>
         <%= link_to '編集', edit_admin_user_path(@user.id), class: "btn btn-sm btn-success" %>
         <%= link_to 'ユーザー一覧', admin_users_path, class: "btn btn-sm btn-success" %>
-        <%#= link_to 'コメント一覧', class: "btn btn-sm btn-danger" %>
+        <%= link_to 'コメント一覧', comments_admin_user_path(@user), class: "btn btn-sm btn-success" %>
       </div>
     </div>
   </div>
