--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,9 @@
                 </li>
               <% else %>
                 <li>
+                  <%= link_to "guest", users_guest_sign_in_path %>
+                </li>
+                <li>
                   <%= link_to "sign up", new_user_registration_path %>
                 </li>
                 <li>
