--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
                 </li>
               <% else %>
                 <li>
-                  <%= link_to "guest", users_guest_sign_in_path %>
+                  <%= link_to "guest", users_guest_sign_in_path, method: :post %>
                 </li>
                 <li>
                   <%= link_to "sign up", new_user_registration_path %>
