--- a/app/views/public/categories/show.html.erb
+++ b/app/views/public/categories/show.html.erb
@@ -7,13 +7,14 @@
             <h4><strong><%= @category.name %></strong></h4>
           </div>
         </div>
-        <%#= @exhibitions.each do |exhibition| %>
-          <%# if @category.id == exhibition.category_id %>
-            <%#= link_to exhibition_path(exhibition.id) %>
-              <%#= image_tag exhibition.get_image(200,200) %>
-              <%#= exhibition.title %>
-          <%# end %>
-        <%# end %>
+        <% @exhibitions.each do |exhibition| %>
+          <% if @category.id == exhibition.category_id %>
+            <%= link_to exhibition_path(exhibition.id) do %>
+              <%= image_tag exhibition.image, size: "200x200" %>
+              <%= exhibition.title %>
+            <% end %>
+          <% end %>
+        <% end %>
       </div>
     </div>
   </div>
