--- a/app/views/public/exhibitions/search.html.erb
+++ b/app/views/public/exhibitions/search.html.erb
@@ -5,13 +5,11 @@
         <div class="text-center">
           <h1>Photo Gallery</h1>
 
-          <% @exhibition.each do |exhibition| %>
+          <% @results.each do |exhibition| %>
             <%= link_to exhibition_path(exhibition.id) do %>
               <%= image_tag exhibition.image, size: "200x200" %>
             <% end %>
           <% end %>
-
-          
         </div>
       </div>
     </div>
