--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,37 +4,33 @@
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="card shadow">
           <div class="card-body text-secondary text-center">
-            <h2>Sign up</h2>
+            <h2>Sign up</h2><br>
 
             <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= render "public/shared/error_messages", resource: resource %>
 
             <div class="field">
-              <%= f.label :name %><br>
-              <%= f.text_field :name %>
+              <%= f.text_field :name, placeholder: "名前", class: "form-control" %>
             </div>
 
             <div class="field">
-              <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+              <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス", class: "form-control" %>
             </div>
 
             <div class="field">
-              <%= f.label :password %>
-              <% if @minimum_password_length %>
-              <em>(<%= @minimum_password_length %> characters minimum)</em>
-              <% end %><br />
-              <%= f.password_field :password, autocomplete: "new-password" %>
+              <%# if @minimum_password_length %>
+              <!--<em>(<%#= @minimum_password_length %> characters minimum)</em>-->
+              <!--<%# end %><br />-->
+              <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード(6文字以上)", class: "form-control" %>
             </div>
 
             <div class="field">
-              <%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-            </div>
+              <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "パスワード(確認用)", class: "form-control" %>
+            </div><br>
 
             <div class="actions">
-              <%= f.submit "Sign up" %>
-            </div>
+              <%= f.submit "Sign up", class: "pushcircle" %>
+            </div><br>
             <% end %>
 
             <p>アカウントをお持ちの方は<br>
