--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -9,35 +9,14 @@
 }
 
 .slider img {
-    width:100%;/*スライダー内の画像を横幅100%に*/
-    height:auto;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
 }
 
 /*slickのJSで書かれるタグ内、スライド左右の余白調整*/
 .slider .slick-slide {
     margin:0 10px;
-}
-
-/*矢印の設定*/
-.slick-prev, 
-.slick-next {
-    position: absolute;/*絶対配置にする*/
-    top: 42%;
-    outline: none;/*クリックをしたら出てくる枠線を消す*/
-    border-top: 2px solid #666;/*矢印の色*/
-    border-right: 2px solid #666;/*矢印の色*/
-    height: 15px;
-    width: 15px;
-}
-
-.slick-prev {/*戻る矢印の位置と形状*/
-    left: -1.5%;
-    transform: rotate(-135deg);
-}
-
-.slick-next {/*次へ矢印の位置と形状*/
-    right: -1.5%;
-    transform: rotate(45deg);
 }
 
 /*ドットナビゲーションの設定*/
@@ -49,7 +28,7 @@
 
 .slick-dots li {
     display:inline-block;
-	margin:0 5px;
+	margin:20 5px;
 }
 
 .slick-dots button {
@@ -59,9 +38,9 @@
     height:8px;/*ドットボタンのサイズ*/
     display:block;
     border-radius:50%;
-    background:#ccc;/*ドットボタンの色*/
+
 }
 
 .slick-dots .slick-active button{
-    background:#333;/*ドットボタンの現在地表示の色*/
+    background:#778899;/*ドットボタンの現在地表示の色*/
 }
