ログイン、新規登録画面の背景スライド実装

--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -37,6 +37,14 @@
                <%= link_to "こちら", new_user_session_path %>からログイン</p>
 
             <%#= render "public/shared/links" %>
+            
+            <!--背景のスライド-->
+            <ul class="background">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
           </div>
         </div>
       </div>
