--- a/app/assets/stylesheets/public/users.scss
+++ b/app/assets/stylesheets/public/users.scss
@@ -1,3 +1,86 @@
 // Place all the styles related to the public/users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+// 新規登録、ログイン時の背景
+.background{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    z-index: -1;
+}
+.background li {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
+    opacity: 0;
+    -webkit-animation: anime 40s linear 0s infinite ;
+    animation: anime 40s linear 0s infinite ;
+}
+.background li:nth-child(1) {
+    background-image: url(sakura.jpg)
+}
+.background li:nth-child(2) {
+    background-image: url(sora.jpg);
+    -webkit-animation-delay: 10s;
+    animation-delay: 10s;
+}
+.background li:nth-child(3) {
+    background-image: url(kagami.jpg);
+    -webkit-animation-delay: 20s;
+    animation-delay: 20s;
+}
+.background li:nth-child(4) {
+    background-image: url(syabonndama.jpg);
+    -webkit-animation-delay: 30s;
+    animation-delay: 30s;
+}
+@-webkit-keyframes anime {
+    0% {
+        -webkit-animation-timing-function: ease-in;
+        opacity: 0;
+    }
+    10% {
+        -webkit-transform: scale(1.1);
+        opacity: 1;
+    }
+    40% {
+        -webkit-transform: scale(1.2);
+            -webkit-animation-timing-function: ease-out;
+        opacity: 1;
+    }
+    50% {
+        -webkit-transform: scale(1.3);
+        opacity: 0;
+    }
+    100% { opacity: 0 }
+}
+@keyframes anime {
+    0% {
+        animation-timing-function: ease-in;
+        opacity: 0;
+    }
+    10% {
+        transform: scale(1.1);
+        opacity: 1;
+    }
+    40% {
+        transform: scale(1.2);
+            animation-timing-function: ease-out;
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.3);
+        opacity: 0;
+    }
+    100% { opacity: 0 }
+}
