--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -3,22 +3,22 @@
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="card shadow">
-          <div class="card-body text-secondary text-center">
-            <h1>会員情報変更</h1>
+          <div class="card-body text-secondary">
+            <h1 class="text-center">会員情報変更</h1>
               <%= form_with model: @user do |f| %>
                 <p>名前</p>
-                <p><%= f.text_field :name %></p>
+                <p><%= f.text_field :name, placeholder: "名前", class: "form-control" %></p>
                 <p>メールアドレス</p>
-                <p><%= f.text_field :email %></p>
+                <p><%= f.text_field :email, placeholder: "メールアドレス", class: "form-control" %></p>
                 <p>ニックネーム</p>
-                <p><%= f.text_field :nickname %></p>
+                <p><%= f.text_field :nickname, placeholder: "ニックネーム", class: "form-control" %></p>
                 <p>プロフィール</p>
-                <p><%= f.text_field :profile %></p>
+                <p><%= f.text_field :profile, placeholder: "プロフィール", class: "form-control" %></p>
                 <p>外部リンク</p>
-                <p><%= f.text_field :extemal_link%></p>
-                <%= f.submit '保存' %>
+                <p><%= f.text_field :extemal_link, placeholder: "外部リンク", class: "form-control"%></p>
+                <div class="text-center"><%= f.submit '保存' %></div>
               <% end %>
-                <%= link_to '退会', users_unsubscribe_path, class: "btn btn-sm btn-success" %>
+                <div class="text-center"><%= link_to '退会', users_unsubscribe_path, class: "btn btn-sm btn-success" %></div>
           </div>
         </div>
       </div>
