--- a/app/assets/stylesheets/public/exhibitions.scss
+++ b/app/assets/stylesheets/public/exhibitions.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the public/exhibitions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+// .photo-size {
+// 	width: 200px;
+// 	height: 200px;
+// 	object-fit: cover;
+// 	object-position: 0 0;
+// }
