--- a/app/views/public/exhibitions/show.html.erb
+++ b/app/views/public/exhibitions/show.html.erb
@@ -1,29 +1,35 @@
 <div class=" d-flex align-items-center justify-content-center pt-5">
   <div class="container">
     <div class="row">
-      <div class="col-11 col-md-8 col-lg-6 mx-auto">
+      <div class="col-11 col-md-8 col-lg-10 mx-auto">
         <div class="text-center">
-          <p><%= image_tag @exhibition.image, size: "200x200" %></p>
-          <p><%= @exhibition.title %></p>
+          <p><%= image_tag @exhibition.get_image(700,700) %></p><br>
+          <p>「<%= @exhibition.title %>」</p>
           <p><%= @exhibition.introduction %></p>
-              <!--いいね機能実装-->
-              <% if @exhibition.favorited_by?(current_user) %>
-                <p>
-                  <%= link_to exhibition_favorites_path(@exhibition), method: :delete do %>
-                    ♥<%= @exhibition.favorites.count %> いいね
-                  <% end %>
-                </p>
-                  <% else %>
-                <p>
-                  <%= link_to exhibition_favorites_path(@exhibition), method: :post do %>
-                    ♡<%= @exhibition.favorites.count %> いいね
-                  <% end %>
-                </p>
+
+          <!--いいね機能実装-->
+          <% if @exhibition.favorited_by?(current_user) %>
+            <p>
+              <%= link_to exhibition_favorites_path(@exhibition), method: :delete do %>
+                ♥<%= @exhibition.favorites.count %> いいね
               <% end %>
-              <!--コメント機能-->
-              <p><%= link_to "コメントする", comments_exhibition_path(@exhibition) %></p>
-          <p><%= link_to "編集", edit_exhibition_path(@exhibition.id) %></p>
-          <p><%= link_to "削除", exhibition_path(@exhibition.id), method: :delete, "date-confirm" => "本当に削除しますか？" %></p>
+            </p>
+              <% else %>
+            <p>
+              <%= link_to exhibition_favorites_path(@exhibition), method: :post do %>
+                ♡<%= @exhibition.favorites.count %> いいね
+              <% end %>
+            </p>
+          <% end %>
+
+          <!--コメント機能-->
+          <p><%= link_to "コメントする", comments_exhibition_path(@exhibition) %></p>
+
+          <!--ログイン中のユーザー以外は編集、削除できないようにする-->
+          <% if @exhibition.user == current_user %>
+            <p><%= link_to "編集", edit_exhibition_path(@exhibition.id) %></p>
+            <p><%= link_to "削除", exhibition_path(@exhibition.id), method: :delete, "date-confirm" => "本当に削除しますか？" %></p>
+          <% end %>
         </div>
       </div>
     </div>
