--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -2,16 +2,40 @@
   <div class="container">
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
-        <h4><strong><%= @user.name %>さんの会員情報</strong></h4>
-          <p>ユーザーID  <%= @user.id %></p>
-            <%= form_with model: @user, url: admin_user_path(@user.id), method: :patch do |f| %>
-              <p>名前  <%= f.text_field :name %></p>
-              <p>メールアドレス  <%= f.text_field :email %></p>
-              <p>会員ステータス
-                  <%= f.radio_button :is_deleted, 0, checked: true %>有効 <%= f.radio_button :is_deleted, 1 %>退会</p>
-              <%= f.submit '変更', class: "btn btn-success" %>
-            <% end %>
+        <div class="text-center">
+          <h4><strong><%= @user.name %>さんの会員情報</strong></h4><br>
+        </div>
       </div>
+    </div>
+    <div class="row text-center">
+      <table align="center">
+        <%= form_with model: @user, url: admin_user_path(@user.id), method: :patch do |f| %>
+        <tr>
+          <th></th>
+          <th></th>
+        </tr>
+        <tr>
+          <td width="200" height="50">ユーザーID</td>
+          <td width="200" height="50"><%= @user.id %></td>
+        </tr>
+        <tr>
+          <td height="50">名前</td>
+          <td height="50"><%= f.text_field :name %></td>
+        </tr>
+        <tr>
+          <td height="50">メールアドレス</td>
+          <td height="50"><%= f.text_field :email %></td>
+        </tr>
+        <tr>
+          <td height="50">会員ステータス</td>
+          <td height="50"><%= f.radio_button :is_deleted, 0, checked: true %>有効 <%= f.radio_button :is_deleted, 1 %>退会</td>
+        </tr>
+        <tr>
+          <td height="50"></td>
+          <td height="50"><%= f.submit '変更', class: "btn btn-success" %></td>
+        </tr>
+        <% end %>
+      </table>
     </div>
   </div>
 </div>
