--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -2,20 +2,45 @@
   <div class="container">
     <div class="row">
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
-        <h4><strong><%= @user.name %>さんの会員情報</strong></h4>
-        <p>ユーザーID  <%= @user.id %></p>
-        <p>名前  <%= @user.name %></p>
-        <p>メールアドレス  <%= @user.email %></p>
-        <p>会員ステータス
+        <div class="text-center">
+          <h4><strong><%= @user.name %>さんの会員情報</strong></h4><br>
+        </div>
+      </div>
+    </div>
+    <div class="row text-center">
+      <table align="center">
+        <tr>
+          <th></th>
+          <th></th>
+        </tr>
+        <tr>
+          <td width="200" height="50">ユーザーID</td>
+          <td width="200" height="50"><%= @user.id %></td>
+        </tr>
+        <tr>
+          <td height="50">名前</td>
+          <td height="50"><%= @user.name %></td>
+        </tr>
+        <tr>
+          <td height="50">メールアドレス</td>
+          <td height="50"><%= @user.email %></td>
+        </tr>
+        <tr>
+          <td height="50">会員ステータス</td>
+          <td height="50">
             <% if @user.is_deleted == false %>
               <span class="text-success"><strong>有効</strong></span>
             <% else %>
               <span class="text-secondary"><strong>退会</strong></span>
             <% end %></p>
-        <%= link_to '編集', edit_admin_user_path(@user.id), class: "btn btn-sm btn-success" %>
-        <%= link_to 'ユーザー一覧', admin_users_path, class: "btn btn-sm btn-success" %>
-        <%= link_to 'コメント一覧', comments_admin_user_path(@user), class: "btn btn-sm btn-success" %>
-      </div>
+          </td>
+        </tr>
+      </table>
+    </div><br>
+    <div class="d-grid gap-2 col-6 mx-auto text-center">
+      <%= link_to '会員情報編集', edit_admin_user_path(@user.id), class: "btn btn-outline-success" %>
+      <%= link_to 'コメント一覧', comments_admin_user_path(@user), class: "btn btn-outline-success" %>
+      <%= link_to 'ユーザー一覧', admin_users_path, class: "btn btn-outline-success" %>
     </div>
   </div>
 </div>
