--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -10,6 +10,8 @@
                 <p><%= f.text_field :name, class: "form-control" %></p>
                 <p>メールアドレス</p>
                 <p><%= f.text_field :email, class: "form-control" %></p>
+                <p>アイコン</p>
+                <p><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></p>
                 <p>ニックネーム</p>
                 <p><%= f.text_field :nickname, class: "form-control" %></p>
                 <p>プロフィール</p>
