--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -14,7 +14,7 @@
       </div>
 
         <div class="col-4">
-
+          <p><%#= @user.get_profile_image(100,100) %></p>
           <p><%= @user.nickname %></p>
           <p><%= @user.profile %></p>
           <p><%= @user.extemal_link %></p>
