--- a/app/views/public/users/unsubscribe.html.erb
+++ b/app/views/public/users/unsubscribe.html.erb
@@ -4,7 +4,7 @@
       <div class="col-11 col-md-8 col-lg-6 mx-auto">
         <div class="card shadow">
           <div class="card-body text-center">
-            <i class="fal fa-exclamation-triangle"></i>
+            <i class="fa fa-exclamation-triangle fa-3x"></i>
             <h4><strong>本当に退会しますか？</strong></h4><br>
             <p>退会すると、会員登録情報や<br>
                 展示中の写真がサイトから消えてしまいます。<br>
